// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pages managePassengerGroup should render correctly after errors are made and page rerenders 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/managePassengerGroup?_csrf="
            method="post"
          >
            <div
              aria-labelledby="error-summary-title"
              class="govuk-error-summary"
              data-module="govuk-error-summary"
              role="alert"
              tabindex="-1"
            >
              <h2
                class="govuk-error-summary__title"
                id="error-summary-title"
              >
                There is a problem
              </h2>
              <div
                class="govuk-error-summary__body"
              >
                <ul
                  class="govuk-list govuk-error-summary__list"
                >
                  <li>
                    <a
                      href="#minimum-passengers-Regular Senior"
                    >
                      Minimum amount cannot be greater than 4
                    </a>
                  </li>
                  <li>
                    <a
                      href="#minimum-passengers-Regular Senior"
                    >
                      Maximum amount is required
                    </a>
                  </li>
                  <li>
                    <a
                      href="#passenger-group-name"
                    >
                      Enter a group name of up to 50 characters
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <input
              name="groupId"
              type="hidden"
              value="0"
            />
            <h1
              class="govuk-heading-xl"
              id="group-page-heading"
            >
              Provide passenger group details
            </h1>
            <div
              class="govuk-form-group"
              id="max-group-size-header"
            >
              <label
                for="max-group-size"
              >
                <h1
                  class="govuk-heading-m"
                  id="group-size-heading"
                >
                  How many passengers can use this ticket at one time?
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-size-example"
              >
                We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-2"
                  id="max-group-size"
                  name="maxGroupSize"
                  type="text"
                  value="4"
                />
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <fieldset
                aria-describedby="passenger-type-page-heading"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                >
                  <h1
                    class="govuk-fieldset__heading"
                    id="passenger-type-page-heading"
                  >
                    Which type of passengers can use this ticket?
                  </h1>
                </legend>
                <span
                  class="govuk-hint"
                  id="passenger-type-hint"
                >
                  Select the passenger types included in your group ticket.
                </span>
                <div
                  class=""
                >
                  <div
                    class="govuk-checkboxes"
                    data-module="govuk-checkboxes"
                  >
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-0"
                          id="passenger-type-0"
                          name="passengerTypes"
                          type="checkbox"
                          value="1"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-0"
                        >
                          Regular Senior
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-0"
                      >
                        <label
                          for="maximum-passengers-Regular Senior"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-1"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-1"
                            name="minimumPassengers1"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-1"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-1"
                            name="maximumPassengers1"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType1"
                        type="hidden"
                        value="Regular Senior"
                      />
                    </div>
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-1"
                          id="passenger-type-1"
                          name="passengerTypes"
                          type="checkbox"
                          value="2"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-1"
                        >
                          Regular infant
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-1"
                      >
                        <label
                          for="maximum-passengers-Regular infant"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-2"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-2"
                            name="minimumPassengers2"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-2"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-2"
                            name="maximumPassengers2"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType2"
                        type="hidden"
                        value="Regular infant"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-form-group govuk-form-group--error"
              id="passenger-group-name"
            >
              <label
                for="passenger-group-name"
              >
                <h1
                  class="govuk-heading-m"
                  id="passenger-group-name-heading"
                >
                  Provide a name for your group
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-name-hint"
              >
                50 characters maximum
              </p>
              <div
                class=""
              >
                <span
                  class="govuk-error-message"
                  id="passenger-group-name-error"
                >
                  <span
                    class="govuk-visually-hidden"
                  >
                    Error: 
                  </span>
                  Enter a group name of up to 50 characters
                </span>
                <input
                  aria-describedby="passenger-group-name-error"
                  class="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input govuk-input--error"
                  id="passenger-group-name"
                  maxlength="50"
                  name="passengerGroupName"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <input
              class="govuk-button"
              id="continue-button"
              type="submit"
              value="Add passenger group"
            />
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages managePassengerGroup should render correctly in edit mode 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/managePassengerGroup?_csrf="
            method="post"
          >
            <div
              aria-labelledby="govuk-notification-banner-title"
              class="govuk-notification-banner"
              data-module="govuk-notification-banner"
            >
              <div
                class="govuk-notification-banner__header"
              >
                <h2
                  class="govuk-notification-banner__title"
                  id="govuk-notification-banner-title"
                >
                  Important
                </h2>
              </div>
              <div
                class="govuk-notification-banner__content"
              >
                <p
                  class="govuk-notification-banner__heading"
                >
                  Editing and saving new changes will be applied to all fares using this passenger group.
                </p>
              </div>
            </div>
            <input
              name="groupId"
              type="hidden"
              value="5"
            />
            <h1
              class="govuk-heading-xl"
              id="group-page-heading"
            >
              Provide passenger group details
            </h1>
            <div
              class="govuk-form-group"
              id="max-group-size-header"
            >
              <label
                for="max-group-size"
              >
                <h1
                  class="govuk-heading-m"
                  id="group-size-heading"
                >
                  How many passengers can use this ticket at one time?
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-size-example"
              >
                We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-2"
                  id="max-group-size"
                  name="maxGroupSize"
                  type="text"
                  value="4"
                />
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <fieldset
                aria-describedby="passenger-type-page-heading"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                >
                  <h1
                    class="govuk-fieldset__heading"
                    id="passenger-type-page-heading"
                  >
                    Which type of passengers can use this ticket?
                  </h1>
                </legend>
                <span
                  class="govuk-hint"
                  id="passenger-type-hint"
                >
                  Select the passenger types included in your group ticket.
                </span>
                <div
                  class=""
                >
                  <div
                    class="govuk-checkboxes"
                    data-module="govuk-checkboxes"
                  >
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-0"
                          id="passenger-type-0"
                          name="passengerTypes"
                          type="checkbox"
                          value="1"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-0"
                        >
                          Regular Senior
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-0"
                      >
                        <label
                          for="maximum-passengers-Regular Senior"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-1"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-1"
                            name="minimumPassengers1"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-1"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-1"
                            name="maximumPassengers1"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType1"
                        type="hidden"
                        value="Regular Senior"
                      />
                    </div>
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-1"
                          id="passenger-type-1"
                          name="passengerTypes"
                          type="checkbox"
                          value="2"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-1"
                        >
                          Regular infant
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-1"
                      >
                        <label
                          for="maximum-passengers-Regular infant"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-2"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-2"
                            name="minimumPassengers2"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-2"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-2"
                            name="maximumPassengers2"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType2"
                        type="hidden"
                        value="Regular infant"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-form-group"
              id="passenger-group-name"
            >
              <label
                for="passenger-group-name"
              >
                <h1
                  class="govuk-heading-m"
                  id="passenger-group-name-heading"
                >
                  Provide a name for your group
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-name-hint"
              >
                50 characters maximum
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
                  id="passenger-group-name"
                  maxlength="50"
                  name="passengerGroupName"
                  type="text"
                  value="the best group"
                />
              </div>
            </div>
            <input
              class="govuk-button"
              id="continue-button"
              type="submit"
              value="Update passenger group"
            />
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages managePassengerGroup should render correctly in edit mode with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/managePassengerGroup?_csrf="
            method="post"
          >
            <div
              aria-labelledby="error-summary-title"
              class="govuk-error-summary"
              data-module="govuk-error-summary"
              role="alert"
              tabindex="-1"
            >
              <h2
                class="govuk-error-summary__title"
                id="error-summary-title"
              >
                There is a problem
              </h2>
              <div
                class="govuk-error-summary__body"
              >
                <ul
                  class="govuk-list govuk-error-summary__list"
                >
                  <li>
                    <a
                      href="#minimum-passengers-Regular Senior"
                    >
                      Minimum amount cannot be greater than 4
                    </a>
                  </li>
                  <li>
                    <a
                      href="#minimum-passengers-Regular Senior"
                    >
                      Maximum amount is required
                    </a>
                  </li>
                  <li>
                    <a
                      href="#passenger-group-name"
                    >
                      Enter a group name of up to 50 characters
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <input
              name="groupId"
              type="hidden"
              value="5"
            />
            <h1
              class="govuk-heading-xl"
              id="group-page-heading"
            >
              Provide passenger group details
            </h1>
            <div
              class="govuk-form-group"
              id="max-group-size-header"
            >
              <label
                for="max-group-size"
              >
                <h1
                  class="govuk-heading-m"
                  id="group-size-heading"
                >
                  How many passengers can use this ticket at one time?
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-size-example"
              >
                We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-2"
                  id="max-group-size"
                  name="maxGroupSize"
                  type="text"
                  value="4"
                />
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <fieldset
                aria-describedby="passenger-type-page-heading"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                >
                  <h1
                    class="govuk-fieldset__heading"
                    id="passenger-type-page-heading"
                  >
                    Which type of passengers can use this ticket?
                  </h1>
                </legend>
                <span
                  class="govuk-hint"
                  id="passenger-type-hint"
                >
                  Select the passenger types included in your group ticket.
                </span>
                <div
                  class=""
                >
                  <div
                    class="govuk-checkboxes"
                    data-module="govuk-checkboxes"
                  >
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-0"
                          id="passenger-type-0"
                          name="passengerTypes"
                          type="checkbox"
                          value="1"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-0"
                        >
                          Regular Senior
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-0"
                      >
                        <label
                          for="maximum-passengers-Regular Senior"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-1"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-1"
                            name="minimumPassengers1"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-1"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-1"
                            name="maximumPassengers1"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType1"
                        type="hidden"
                        value="Regular Senior"
                      />
                    </div>
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-1"
                          id="passenger-type-1"
                          name="passengerTypes"
                          type="checkbox"
                          value="2"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-1"
                        >
                          Regular infant
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-1"
                      >
                        <label
                          for="maximum-passengers-Regular infant"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-2"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-2"
                            name="minimumPassengers2"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-2"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-2"
                            name="maximumPassengers2"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType2"
                        type="hidden"
                        value="Regular infant"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-form-group govuk-form-group--error"
              id="passenger-group-name"
            >
              <label
                for="passenger-group-name"
              >
                <h1
                  class="govuk-heading-m"
                  id="passenger-group-name-heading"
                >
                  Provide a name for your group
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-name-hint"
              >
                50 characters maximum
              </p>
              <div
                class=""
              >
                <span
                  class="govuk-error-message"
                  id="passenger-group-name-error"
                >
                  <span
                    class="govuk-visually-hidden"
                  >
                    Error: 
                  </span>
                  Enter a group name of up to 50 characters
                </span>
                <input
                  aria-describedby="passenger-group-name-error"
                  class="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input govuk-input--error"
                  id="passenger-group-name"
                  maxlength="50"
                  name="passengerGroupName"
                  type="text"
                  value="the best group"
                />
              </div>
            </div>
            <input
              class="govuk-button"
              id="continue-button"
              type="submit"
              value="Update passenger group"
            />
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`pages managePassengerGroup should render correctly on first opening of page 1`] = `
<DocumentFragment>
  <div
    class="govuk-phase-banner app-phase-banner app-width-container"
  >
    <p
      class="govuk-phase-banner__content"
    >
      <strong
        class="govuk-tag govuk-phase-banner__content__tag"
      >
        Beta
      </strong>
      <span
        class="govuk-phase-banner__text"
      >
        This is a new service. Help us improve it and 
        <a
          class="govuk-link"
          href="/feedback"
          id="feedback-link"
        >
          give your feedback (opens in new tab)
        </a>
        .
      </span>
    </p>
  </div>
  <div
    class="govuk-width-container"
  >
    <main
      class="govuk-main-wrapper"
      id="main-content"
    >
      <div
        class="govuk-grid-row"
      >
        <div
          class="govuk-grid-column-two-thirds"
        >
          <form
            action="/api/managePassengerGroup?_csrf="
            method="post"
          >
            <input
              name="groupId"
              type="hidden"
            />
            <h1
              class="govuk-heading-xl"
              id="group-page-heading"
            >
              Provide passenger group details
            </h1>
            <div
              class="govuk-form-group"
              id="max-group-size-header"
            >
              <label
                for="max-group-size"
              >
                <h1
                  class="govuk-heading-m"
                  id="group-size-heading"
                >
                  How many passengers can use this ticket at one time?
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-size-example"
              >
                We need to know the maximum size of the group of passengers that can use this ticket at one time. Example: Up to 5 passengers at a time would require an input of 5
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-2"
                  id="max-group-size"
                  name="maxGroupSize"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="govuk-form-group"
            >
              <fieldset
                aria-describedby="passenger-type-page-heading"
                class="govuk-fieldset"
              >
                <legend
                  class="govuk-fieldset__legend govuk-fieldset__legend--m"
                >
                  <h1
                    class="govuk-fieldset__heading"
                    id="passenger-type-page-heading"
                  >
                    Which type of passengers can use this ticket?
                  </h1>
                </legend>
                <span
                  class="govuk-hint"
                  id="passenger-type-hint"
                >
                  Select the passenger types included in your group ticket.
                </span>
                <div
                  class=""
                >
                  <div
                    class="govuk-checkboxes"
                    data-module="govuk-checkboxes"
                  >
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-0"
                          id="passenger-type-0"
                          name="passengerTypes"
                          type="checkbox"
                          value="1"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-0"
                        >
                          Normal Adult
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-0"
                      >
                        <label
                          for="maximum-passengers-Normal Adult"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-1"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-1"
                            name="minimumPassengers1"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-1"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-1"
                            name="maximumPassengers1"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType1"
                        type="hidden"
                        value="Normal Adult"
                      />
                    </div>
                    <div>
                      <div
                        class="govuk-checkboxes__item"
                      >
                        <input
                          class="govuk-checkboxes__input"
                          data-aria-controls="conditional-input-1"
                          id="passenger-type-1"
                          name="passengerTypes"
                          type="checkbox"
                          value="2"
                        />
                        <label
                          class="govuk-label govuk-checkboxes__label"
                          for="passenger-type-1"
                        >
                          Normal child
                        </label>
                      </div>
                      <div
                        class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                        id="conditional-input-1"
                      >
                        <label
                          for="maximum-passengers-Normal child"
                        >
                          <h1
                            class="govuk-heading-s"
                            id="individual-limit-heading"
                          >
                            We need to know how many passengers can use this at one time
                          </h1>
                        </label>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="minimum-passengers-2"
                          >
                            Minimum (optional)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="minimum-passengers"
                            id="minimum-passengers-2"
                            name="minimumPassengers2"
                            value=""
                          />
                        </div>
                        <div
                          class="govuk-form-group"
                        >
                          <label
                            class="govuk-label"
                            for="maximum-passengers-2"
                          >
                            Maximum (required)
                          </label>
                          <input
                            class="govuk-input govuk-!-width-one-third"
                            data-test-id="maximum-passengers"
                            id="maximum-passengers-2"
                            name="maximumPassengers2"
                            value=""
                          />
                        </div>
                      </div>
                      <input
                        name="passengerType2"
                        type="hidden"
                        value="Normal child"
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
            </div>
            <div
              class="govuk-form-group"
              id="passenger-group-name"
            >
              <label
                for="passenger-group-name"
              >
                <h1
                  class="govuk-heading-m"
                  id="passenger-group-name-heading"
                >
                  Provide a name for your group
                </h1>
              </label>
              <p
                class="govuk-hint"
                id="group-name-hint"
              >
                50 characters maximum
              </p>
              <div
                class=""
              >
                <input
                  class="govuk-input govuk-input--width-30 govuk-product-name-input__inner__input"
                  id="passenger-group-name"
                  maxlength="50"
                  name="passengerGroupName"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <input
              class="govuk-button"
              id="continue-button"
              type="submit"
              value="Add passenger group"
            />
          </form>
        </div>
      </div>
    </main>
    <div>
      <h2
        class="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        class="govuk-body"
      >
        If you are having problems, please contact the Create Fares Data Service via this link: 
        <a
          class="govuk-link govuk-!-font-size-19"
          href="/contact"
        >
          Contact us
        </a>
      </p>
    </div>
  </div>
  <footer
    class="govuk-footer"
    role="contentinfo"
  >
    <div
      class="govuk-width-container"
    >
      <svg
        class="govuk-footer__crown"
        fill="currentcolor"
        focusable="false"
        height="30"
        role="presentation"
        viewBox="0 0 64 60"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            cx="20"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="10.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="3.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <circle
            cx="43.3"
            cy="17.6"
            r="3.7"
          />
          <circle
            cx="53.2"
            cy="23.5"
            r="3.7"
          />
          <circle
            cx="59.7"
            cy="33.2"
            r="3.7"
          />
          <circle
            cx="31.7"
            cy="30.6"
            r="3.7"
          />
          <path
            d="M33.1,9.8c.2-.1.3-.3.5-.5l4.6,2.4v-6.8l-4.6,1.5c-.1-.2-.3-.3-.5-.5l1.9-5.9h-6.7l1.9,5.9c-.2.1-.3.3-.5.5l-4.6-1.5v6.8l4.6-2.4c.1.2.3.3.5.5l-2.6,8c-.9,2.8,1.2,5.7,4.1,5.7h0c3,0,5.1-2.9,4.1-5.7l-2.6-8ZM37,37.9s-3.4,3.8-4.1,6.1c2.2,0,4.2-.5,6.4-2.8l-.7,8.5c-2-2.8-4.4-4.1-5.7-3.8.1,3.1.5,6.7,5.8,7.2,3.7.3,6.7-1.5,7-3.8.4-2.6-2-4.3-3.7-1.6-1.4-4.5,2.4-6.1,4.9-3.2-1.9-4.5-1.8-7.7,2.4-10.9,3,4,2.6,7.3-1.2,11.1,2.4-1.3,6.2,0,4,4.6-1.2-2.8-3.7-2.2-4.2.2-.3,1.7.7,3.7,3,4.2,1.9.3,4.7-.9,7-5.9-1.3,0-2.4.7-3.9,1.7l2.4-8c.6,2.3,1.4,3.7,2.2,4.5.6-1.6.5-2.8,0-5.3l5,1.8c-2.6,3.6-5.2,8.7-7.3,17.5-7.4-1.1-15.7-1.7-24.5-1.7h0c-8.8,0-17.1.6-24.5,1.7-2.1-8.9-4.7-13.9-7.3-17.5l5-1.8c-.5,2.5-.6,3.7,0,5.3.8-.8,1.6-2.3,2.2-4.5l2.4,8c-1.5-1-2.6-1.7-3.9-1.7,2.3,5,5.2,6.2,7,5.9,2.3-.4,3.3-2.4,3-4.2-.5-2.4-3-3.1-4.2-.2-2.2-4.6,1.6-6,4-4.6-3.7-3.7-4.2-7.1-1.2-11.1,4.2,3.2,4.3,6.4,2.4,10.9,2.5-2.8,6.3-1.3,4.9,3.2-1.8-2.7-4.1-1-3.7,1.6.3,2.3,3.3,4.1,7,3.8,5.4-.5,5.7-4.2,5.8-7.2-1.3-.2-3.7,1-5.7,3.8l-.7-8.5c2.2,2.3,4.2,2.7,6.4,2.8-.7-2.3-4.1-6.1-4.1-6.1h10.6,0Z"
          />
        </g>
      </svg>
      <div
        class="govuk-footer__meta"
      >
        <div
          class="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            class="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            class="govuk-footer__inline-list"
          >
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Help
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/cookies"
              >
                Cookies
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/contact"
              >
                Contact
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/accessibility"
              >
                Accessibility
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
              >
                Terms and conditions
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/privacy"
              >
                Privacy
              </a>
            </li>
            <li
              class="govuk-footer__inline-list-item"
            >
              <a
                class="govuk-footer__link"
                href="/changelog"
              >
                Service changelog
              </a>
            </li>
          </ul>
          <p
            class="govuk-footer__body"
          >
            Built by the 
            <a
              class="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            class="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            class="govuk-footer__licence-description"
          >
            All content is available under the 
            <a
              class="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          class="govuk-footer__meta-item"
        >
          <a
            class="govuk-footer__link govuk-footer__copyright-logo"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
